--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "knex": "^0.17.3",
-    "nodemon": "^1.19.1"
+    "knex-migrate": "^1.7.2",
+    "nodemon": "^1.19.1",
+    "sqlite3": "^4.0.8"
   }
 }
