--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/Shayaanakbar/webauth-i-challenge#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^3.0.6",
     "express": "^4.17.1",
     "knex": "^0.17.3",
     "knex-migrate": "^1.7.2",
